<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <artifactId>pandaSport</artifactId>
    <groupId>com.qa</groupId>
    <version>1.0</version>
    <modelVersion>4.0.0</modelVersion>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <testcasefolder>${basedir}/src/</testcasefolder>
        <testngxml>${basedir}/test-xml/</testngxml>
    </properties>

    <repositories>
        <repository>
            <id>snapshot-group</id>
            <url>http://10.0.4.132:8081/nexus/content/groups/SnapshotRepositories/</url>
            <layout>default</layout>
            <releases>
                <enabled>false</enabled>
            </releases>
            <snapshots>
                <updatePolicy>always</updatePolicy>
                <enabled>true</enabled>
                <checksumPolicy>warn</checksumPolicy>
            </snapshots>
        </repository>
    </repositories>

    <profiles>
        <profile>
            <id>dev</id>
            <properties>
                <webPath>webPath=http://www.baidu.com/</webPath>
                <thread-count>1</thread-count>
            </properties>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>exec-maven-plugin</artifactId>
                        <version>1.2.1</version>
                        <executions>
                            <execution>
                                <id>TestngXmlGenerator</id>
                                <phase>process-test-resources</phase>
                                <goals>
                                    <goal>java</goal>
                                </goals>
                                <configuration>
                                    <mainClass>com.qa.framework.generator.TestngXmlGenerator</mainClass>
                                    <systemProperties>
                                    </systemProperties>
                                    <arguments>
                                        <argument>${testcasefolder}</argument>
                                        <argument>${testngxml}</argument>
                                        <argument>${thread-count}</argument>
                                    </arguments>
                                </configuration>
                            </execution>
                            <execution>
                                <id>PropertiesSetting</id>
                                <phase>process-test-resources</phase>
                                <goals>
                                    <goal>java</goal>
                                </goals>
                                <configuration>
                                    <mainClass>com.qa.framework.generator.PropertiesSetting</mainClass>
                                    <systemProperties>
                                        <property>
                                            <key>basedir</key>
                                            <value>${basedir}</value>
                                        </property>
                                    </systemProperties>
                                    <arguments>
                                        <argument>${webPath}</argument>
                                    </arguments>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

    <dependencies>
        <dependency>
            <groupId>com.github.xifan.automation</groupId>
            <artifactId>smart-ui-framework</artifactId>
            <version>3.6.5-SNAPSHOT</version>
        </dependency>
    </dependencies>

    <build>
        <sourceDirectory>src</sourceDirectory>
        <resources>
            <resource>
                <directory>src</directory>
                <filtering>true</filtering>
                <includes>
                    <include>log4j.xml</include>
                </includes>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.1</version>
                <configuration>
                    <source>1.7</source>
                    <target>1.7</target>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.16</version>
                <configuration>
                    <forkMode>once</forkMode>
                    <argLine>-Dfile.encoding=UTF-8 -Xmx1024m -XX:MaxPermSize=256m</argLine>
                    <testFailureIgnore>true</testFailureIgnore>
                    <suiteXmlFiles>
                        <suiteXmlFile>${basedir}/test-xml/xml_${thread-count}.xml</suiteXmlFile>
                    </suiteXmlFiles>
                </configuration>
            </plugin>
        </plugins>
    </build>


</project>